k8s/student-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student
  labels:
    app: student
spec:
  selector:
    app: student
  ports:
    - port: 8080
      name: http
  type: NodePort
