k8s/student-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: student-vs
spec:
  hosts:
    - "*"
  gateways:
    - springdemo-gateway
  http:
    - match:
        - uri:
            prefix: "/students"
      route:
        - destination:
            port:
              number: 8080
            host: student
      retries:
        attempts: 5
        perTryTimeout: 3s
        retryOn: 5xx
